fixed tile buttons on homepage on safari

--- a/app/webpages/home-page/home-page.page.less
+++ b/app/webpages/home-page/home-page.page.less
@@ -232,6 +232,7 @@
         }
         .tile-button{
           display: block;
+          margin: 0 ~"calc(50% - 100px)";
         }
       }//home-feature-tile2 hover ends
     }//home-features-tile2 ends
@@ -252,6 +253,7 @@
         }
         .tile-button{
           display: block;
+          margin: 0 ~"calc(50% - 100px)";
         }
       }//home-feature-tile2 hover ends
     }//home-features-tile2 ends
